# Wyoming-OpenAI-Gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: publish-ghcr.yml  publish-release-wheel.yml  validate.yml
src/wyoming_openai_gateway/: __init__.py  __main__.py  app.py  audio_utils.py  config.py  errors.py  gateway.py  openai_models.py  wyoming_client.py
tests/: conftest.py  test_app.py  test_audio_utils.py  test_config.py  test_openai_models.py
unraid/: wyoming-openai-gateway.xml
